<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.SimpleCalculator"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/constraintGuideLineVertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/constraintGuideLineVertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/equals_Button_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/constraintGuideLineHorizontal" />

    <TextView
        android:id="@+id/calculatorScreenText"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:gravity="end"
        android:onClick="onClickTextView"
        android:text="@string/screenText"
        android:textSize="@dimen/screen_text_size"
        android:textColor="@color/screenTextColor"
        app:layout_constraintBottom_toTopOf="@id/screenBarrier"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@+id/darkModeSwitch" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/screenBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="900dp"
        android:layout_marginBottom="700dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="calculatorScreenText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button1text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button2text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button3text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/buttonDivision"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDivision"
        style="@style/ActionsButtonsStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/buttonDivisionText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonMulti"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/screenBarrier"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button4text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button5text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button6text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@id/buttonMulti"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMulti"
        style="@style/ActionsButtonsStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/buttonMultiText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonPlus"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/buttonDivision" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button7text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonClear"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button8text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button9text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonDot"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlus"
        style="@style/ActionsButtonsStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/buttonPlusText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonMinus"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/buttonMulti" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClear"
        style="@style/cAndDotButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/buttonClearText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/equals_Button_guideLine"
        app:layout_constraintEnd_toStartOf="@id/button0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0"
        style="@style/DigitalButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/button0text"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/equals_Button_guideLine"
        app:layout_constraintEnd_toStartOf="@id/buttonDot"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEquals"
        style="@style/EqualsButtonStyle.ButtonStyle"
        android:layout_width="@dimen/button_equals_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:layout_marginBottom="@dimen/button_equals_to_bottom"
        android:onClick="onClickAnyButton"
        android:text="@string/buttonEqualsText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/equals_Button_guideLine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMinus"
        style="@style/ActionsButtonsStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onClickAnyButton"
        android:text="@string/buttonMinusText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/equals_Button_guideLine"
        app:layout_constraintEnd_toStartOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/buttonDot"
        app:layout_constraintTop_toBottomOf="@id/buttonPlus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDot"
        style="@style/cAndDotButtonStyle.ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_to_next_button"
        android:onClick="onClickAnyButton"
        android:text="@string/buttonDotText"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/equals_Button_guideLine"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button9" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSwitcher"
        android:text="@string/switchText"
        android:textSize="@dimen/switchTextSize"
        app:layout_constraintBottom_toTopOf="@id/screenBarrier"
        app:layout_constraintEnd_toStartOf="@+id/content_end"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="@+id/content_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button1,button2,button3,button6,button5,button4,button7,button8,button9,button0" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buttonDivision,buttonMulti,buttonPlus,buttonMinus" />

</androidx.constraintlayout.widget.ConstraintLayout>